plugins & config repo alignment issues

--- a/server/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
@@ -24,18 +24,30 @@
 
 .good-last-parse-icon {
   @include header-icon($type: $fa-var-check, $color: $success-txt);
+  &:before {
+    margin: 0;
+  }
 }
 
 .last-parse-error-icon {
   @include header-icon($type: $fa-var-exclamation, $color: $warning-txt);
+  &:before {
+    margin: 0;
+  }
 }
 
 .never-parsed {
   @include header-icon($type: $fa-var-exclamation, $color: $go-danger);
+  &:before {
+    margin: 0;
+  }
 }
 
 .missing-plugin-icon {
   @include header-icon($type: $fa-var-question, $color: $icon-light-color);
+  &:before {
+    margin: 0;
+  }
 }
 
 .scm-header {
@@ -44,7 +56,7 @@
 }
 
 .last-revision {
-  margin-bottom: 10px;
+  margin: 0 0 10px;
 }
 
 code {
